# Openslope_API

./: .gitignore  README.md  api_key.env  cleanup_ski_data.py  current_resort_geojson.json  last_resort.txt  launcher.py  ski_scraper.py  unmatched_slopes_analysis.json
scripts/checkpoints/website_scrapers/alpenplus_brauneck/: brauneck_status.jsonl
scripts/data_tools/: analyze_unmatched_slopes.py  cleanup_launcher.py  cleanup_ski_data.py  collect_geojson.py  collect_geojson_launcher.py  launcher.py  reassign_entities_by_resort_cluster.py  ski_scraper.py  update_resort_coordinates.py
scripts/data_tools/api_collector_tools/: README.md  bergfex_collector.py  bergfex_launcher.py  test_bergfex_api.py
scripts/website_scrapers/: README.md  launch_collectors.py
scripts/website_scrapers/alpenplus/: README.md  __init__.py  base.py
scripts/website_scrapers/alpenplus/brauneck/: README.md  __init__.py  collector.py  scraper.py
scripts/website_scrapers/alpenplus/spitzingsee/: README.md  __init__.py  collector.py  scraper.py
scripts/website_scrapers/alpenplus/sudelfeld/: README.md  __init__.py  collector.py  scraper.py
scripts/website_scrapers/alpenplus/wallberg/: README.md  __init__.py  collector.py  scraper.py
server/: Cargo.toml
server/src/: README.md  auth.rs  main.rs  user_service.rs
server/src/db/: mod.rs  resort_queries.rs
server/src/models/: README.md  db.rs  mod.rs  resort.rs
server/src/routes/: README.md  auth.rs  lifts.rs  mod.rs  resorts.rs  slopes.rs  status.rs
server/src/security/: README.md  api_key.rs  hash.rs  jwt.rs  mod.rs  subscription.rs
server/src/services/: README.md  mod.rs
website/: package-lock.json  package.json
website/src/: App.jsx
website/src/api/: README.md  auth.js  cache.js  client.js
website/src/components/: Navbar.jsx  ProtectedRoute.jsx  SearchInput.jsx  SearchInputWithSuggestions.jsx
website/src/context/: AuthContext.jsx
website/src/pages/: Api.jsx  ApiDemo.jsx  Contact.jsx  Home.jsx  Login.jsx  Map.jsx  ResortDetail.jsx  ResortPage.jsx  Resorts.jsx  Signup.jsx  UserDashboard.jsx
website/src/stylesheets/: api-demo.css  api.css  home.css  map.css
(+3 files in other folders)
